k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app.kubernetes.io/name: project-manager
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: project-manager
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: 8000
